# fret

./: .gitignore  README.md  pyproject.toml
docs/: roadmap.md
docs/scara/: scara.md
scripts/: build.sh  common.sh  install.sh  setup.sh
src/fret/: CMakeLists.txt  __init__.py  package.xml
src/fret/config/: scara_controllers.yaml
src/fret/hooks/: fret.sh
src/fret/include/fret/control/: controller_base.hpp
src/fret/launch/: __init__.py  model.py  sim.py  view.py
src/fret/mesh/: scara.py
src/fret/rviz/: default.rviz  scara.rviz
src/fret/src/: controller_node.cpp  controller_node.hpp
src/fret/src/control/: controller_base.cpp  controller_registry.cpp  controller_registry.hpp  scara_controller.cpp  scara_controller.hpp
src/fret/urdf/: scara.xacro
tests/: test_model_resolution.py
